--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 :root{
-    --red:#d63a25;
+    --blue:#00439c;
     --white:#fff;
     --dark:#1e1c2a;
 }
@@ -29,7 +29,7 @@ body{
     position: fixed;
 }
 .navegacao .logo{
-    color: var(--red);
+    color: var(--blue);
     font-size: 1.7rem;
     font-weight: 600;
 }
@@ -48,14 +48,14 @@ body{
     transition: all 0.5s;
 }
 .navegacao ul li a:hover{
-    color: var(--red);
+    color: var(--blue);
 }
 .navegacao i{
     cursor: pointer;
     font-size: 1.5rem;
 }
 .navegacao i:hover{
-    color: var(--red);
+    color: var(--blue);
 }
 .menu{
     cursor: pointer;
@@ -72,7 +72,7 @@ body{
 }
 .menu .bar:nth-child(1),
 .menu .bar:nth-child(3){
-    background: var(--red);
+    background: var(--blue);
 }
 .home{
     width: 100%;
@@ -87,7 +87,7 @@ body{
 }
 .home-texto .texto-h4{
     font-size: 1.5rem;
-    color: var(--red);
+    color: var(--blue);
     margin-bottom: 1rem;
 }
 .home-texto .texto-h1{
@@ -100,7 +100,7 @@ body{
 }
 .home-btn{
     padding: 15px 45px;
-    background: var(--red);
+    background: var(--blue);
     color: var(--white);
     border-radius: 10px;
     font-weight: 700;
