--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body{
     transition: all 0.5s;
 }
 .home-btn:hover{
-    background: #fc4c35;
+    background: #04234b;
 }
 .home-img img{
     width: 100%;
