--- a/contato.css
+++ b/contato.css
@@ -1,4 +1,7 @@
-/* Adapte conforme necessário */
+.linha {
+    border-top: 2px solid var(--blue);
+    margin-top: 20px; /* Ajusta a margem para melhor visualização da linha */
+}
 
 .contato {
     padding: 100px 10%;
@@ -14,18 +17,20 @@
     font-size: 2.5rem;
     color: var(--blue);
     margin-bottom: 2rem;
+    text-align: left; /* Alinha à esquerda por padrão */
 }
 
 form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start; /* Alinha os itens à esquerda */
 }
 
 label {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
     color: var(--dark);
+    text-align: left;
 }
 
 input,
@@ -33,8 +38,7 @@ textarea {
     width: 100%;
     padding: 12px;
     margin-bottom: 1.5rem;
-    /* border: 1px solid #ddd; */
-    border: 1px solid var(--blue); /* Altera a cor da borda para azul */
+    border: 1px solid var(--blue);
     border-radius: 8px;
     font-size: 1rem;
     transition: border-color 0.3s;
@@ -63,7 +67,6 @@ textarea {
     background: #04234b;
 }
 
-/* Estilo adicional para feedback de envio do formulário */
 .mensagem-envio {
     color: #2ecc71;
     font-weight: 600;
@@ -85,13 +88,13 @@ textarea {
 
 .popup-mensagem {
     font-size: 1.2rem;
-    color: #2ecc71; /* Cor verde de sucesso */
+    color: #2ecc71;
     margin-bottom: 10px;
 }
 
 .popup-fechar {
     padding: 10px 20px;
-    background: #2ecc71; /* Cor verde de sucesso */
+    background: #2ecc71;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -101,5 +104,22 @@ textarea {
 }
 
 .popup-fechar:hover {
-    background: #27ae60; /* Cor mais escura de verde */
+    background: #27ae60;
+}
+@media (max-width: 767px) {
+    .texto-h2 {
+        text-align: center;
+    }
+    .label{
+        text-align: center;
+    }
+    form{
+        align-items: center;
+    }
+    .contato {
+        padding: 100px 10%;
+    }
+    .linha {
+        margin-top: 150px;
+    }
 }
